Added action on mauseclick

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <audio data-key="88" src="audio/synthesizer23.wav"></audio>
       <audio data-key="67" src="audio/brass3.wav"></audio>
   </div>
+  <script src="./jquery-3.3.1.min.js"></script>
   <script src="./script.js" charset="utf-8"></script>
 </body>
 </html>
